feat(process result hint on GUI)